footer z-index fix

--- a/src/App.css
+++ b/src/App.css
@@ -509,6 +509,7 @@ section {
   width: 100vw;
   box-sizing: border-box;
   margin: 0 -2em;
+  z-index: 0;
 }
 
 #final-image-wrapper {
