--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -9,6 +9,7 @@
     padding: 3em 2em 2em 2em;
     font-family: var(--font-family);
     word-spacing: 2px;
+    z-index: 3;
 }
 
 #footer-section .faded{
